Improved landing page performance

--- a/client/index.html
+++ b/client/index.html
@@ -189,9 +189,9 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
           </div>
         </div>
       </template>
-      <script type="module" src="/scripts/modules/cookieBanner.js"></script>
+      <script type="module" src="./scripts/modules/cookieBanner.js"></script>
       <script type="module">
-        import { initCookieBanner } from '/scripts/modules/cookieBanner.js';
+        import { initCookieBanner } from './scripts/modules/cookieBanner.js';
         initCookieBanner();
       </script>
 
