Improved landing page performance

--- a/client/index.html
+++ b/client/index.html
@@ -173,14 +173,20 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
   <!-- End Meta Pixel Code -->
 </head>
 
+<link rel="preload" as="image" href="/assets/rtb-logo-white-224.webp" fetchpriority="high">
+
 <body>
   <div class="header">
     <div class="header-inner">
       <a href="../index.html" class="logo">
         <picture>
-          <source srcset="../assets/rtb-logo-white.webp" type="image/webp">
-          <source srcset="../assets/rtb-logo-white.png" type="image/png">
-          <img id="logo" src="../assets/rtb-logo-white.webp" alt="Raising The Bar Logo" width="224" height="100"
+          <!-- WebP first -->
+          <source type="image/webp" srcset="../assets/rtb-logo-white-224.webp">
+
+          <!-- JPEG fallback -->
+          <source type="image/jpeg" srcset="../assets/rtb-logo-white-224.jpg">
+
+          <img id="logo" src="../assets/rtb-logo-white-224.webp" alt="Raising The Bar Logo" width="224" height="100"
             loading="eager" fetchpriority="high" decoding="async">
         </picture>
       </a>
