Improved landing page performance

--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <link rel="preload" as="image" href="../assets/rtb-logo-white-224.webp" fetchpriority="high">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Open Graph / Social Sharing -->
@@ -172,8 +173,6 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
   </noscript> -->
   <!-- End Meta Pixel Code -->
 </head>
-
-<link rel="preload" as="image" href="/assets/rtb-logo-white-224.webp" fetchpriority="high">
 
 <body>
   <div class="header">
