Updated landing page wording

--- a/client/index.html
+++ b/client/index.html
@@ -378,7 +378,12 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
     </div>
   </div>
   <div class="slogan">
-    <p>We create fitness programs that adapt to your performance and how you feel.</p>
+    <p>If every Monday feels like a reset… <br>
+       this was built for you.</p>
+  </div>
+  <div class="hero-subheadline">
+    A tracker that adapts when life happens — <br>
+     not just when things go right.
   </div>
   <div class="dark-mode-button">
     <img id="darkModeToggle" src="" alt="" height="0px">
@@ -389,8 +394,8 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
       <div class="cta-container">
         <a href="pages/forms.html" class="claim-program-btn">Claim Your Program</a>
       </div>
-      <p class="trust-line">
-        Made for people who actually want to improve.
+      <p class="challenge-line">
+        Tried everything? This is what finally stuck.
       </p>
     </div>
   </section>
