Landing page improvements

--- a/client/index.html
+++ b/client/index.html
@@ -378,13 +378,13 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
     </div>
   </div>
   <div class="slogan">
-    <p>If every Monday feels like a reset… <br>
-       this was built for you.</p>
+    <p>A tracker that adapts when life happens — <br>
+      not just when things go right.</p>
   </div>
-  <div class="hero-subheadline">
+  <!-- <div class="hero-subheadline">
     A tracker that adapts when life happens — <br>
      not just when things go right.
-  </div>
+  </div> -->
   <div class="dark-mode-button">
     <img id="darkModeToggle" src="" alt="" height="0px">
   </div>
@@ -395,10 +395,14 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
         <a href="pages/forms.html" class="claim-program-btn">Claim Your Program</a>
       </div>
       <p class="challenge-line">
-        Tried everything? This is what finally stuck.
+        Setup in 60 seconds—no credit card needed.
       </p>
     </div>
+    <div class="hero-image-wrapper">
+      <img src="/assets/your-ui-mockup.webp" alt="Workout Tracker UI on mobile" class="hero-ui-image">
+    </div>
   </section>
+
   <section class="mini-testimonial">
     <div class="testimonial-card mini">
       <div class="images">
