Landing page improvements

--- a/client/index.html
+++ b/client/index.html
@@ -332,8 +332,8 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
       </form>
 
       <p class="small">
-        Don’t have a program yet?
-        <a href="pages/forms.html">Claim your program here →</a>
+        Don’t have a plan yet?
+        <a href="pages/forms.html">Choose a plan here →</a>
       </p>
     </div>
   </div>
@@ -346,7 +346,7 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
       <div class="faq-list">
         <details>
           <summary>How do I get started?</summary>
-          <p class="faq-answer">Tap <strong>“Claim Your Program”</strong>, fill out the short form, and your
+          <p class="faq-answer">Tap <strong>“Choose a Plan”</strong>, fill out the short form, and your
             personalised tracker will be ready within minutes.</p>
         </details>
 
@@ -392,7 +392,7 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
   <section>
     <div class="">
       <div class="cta-container">
-        <a href="pages/forms.html" class="claim-program-btn">Claim Your Program</a>
+        <a href="pages/forms.html" class="claim-program-btn">Choose a Plan</a>
       </div>
       <p class="challenge-line">
         Setup in 60 seconds—no credit card needed.
@@ -561,7 +561,7 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
   <div class="dots-container"></div>
 
   <div class="cta-container-subtle">
-    <a href="pages/forms.html" class="claim-program-btn-subtle">Claim Your Program</a>
+    <a href="pages/forms.html" class="claim-program-btn-subtle">Choose a Plan</a>
   </div>
   <section class="youtube-prompt-section">
     <div class="youtube-video-container" style="position: relative; padding-top: 56.25%; height: 0; overflow: hidden;">
@@ -600,7 +600,7 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
     <div class="join-now-prompt">
       <h2>Join now</h2>
       <div class="cta-container">
-        <a href="pages/forms.html" class="claim-program-btn">Claim Your Program</a>
+        <a href="pages/forms.html" class="claim-program-btn">Choose a Plan</a>
       </div>
       <p class="trust-line">
         Built by a small team of lifters, developers, and designers who’ve been exactly where you are.
@@ -673,7 +673,7 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
       }
     });
   </script>
-  <script type="module" src="../scripts/landing-page.js"></script>
+  <!-- <script type="module" src="../scripts/landing-page.js"></script> -->
 </body>
 
 </html>
