Landing page improvements

--- a/client/index.html
+++ b/client/index.html
@@ -447,7 +447,7 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
         </picture>
       </div>
       <p class="review-text-mini">
-        Nothing worked — until this. I’ve lost 10kg, but more than that, I finally feel like myself again.
+        Nothing worked — until this. I finally feel like myself again, and it actually fit around my life.
       </p>
     </div>
   </section>
