Landing page improvements

--- a/client/index.html
+++ b/client/index.html
@@ -468,7 +468,7 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
         <li class="step-item">
           <span class="emoji-box">✅</span>
           <p style="margin-top: 5px;">
-            <strong>Complete a quick 2-minute form</strong> to share your goals, preferences, and lifestyle.
+            <strong>Complete a quick 60 second form</strong> to share your goals, preferences, and lifestyle.
           </p>
         </li>
         <li class="step-item">
@@ -538,27 +538,23 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
     </p>
   </section>
   <!-- Testimonial Section (Landing Page) -->
-  <div class="testimonial-section">
+
+  <!-- <div class="testimonial-section">
     <h2>See What Happens When Everything Connects</h2>
     <p class="hero-text">
       Progress from real people, using the same system you're about to unlock.
     </p>
 
     <div class="testimonial-container">
-      <!-- Desktop Arrows (hidden on mobile) -->
       <button class="arrow-button prev">❮</button>
-
-      <!-- Slider that holds all testimonial cards -->
       <div class="testimonial-slider">
-        <!-- Populated by JS -->
       </div>
 
       <button class="arrow-button next">❯</button>
     </div>
   </div>
 
-  <!-- Dots / Pagination for slides -->
-  <div class="dots-container"></div>
+  <div class="dots-container"></div> -->
 
   <div class="cta-container-subtle">
     <a href="pages/forms.html" class="claim-program-btn-subtle">Choose a Plan</a>
