Landing page improvements

--- a/client/index.html
+++ b/client/index.html
@@ -669,7 +669,7 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
       }
     });
   </script>
-  <!-- <script type="module" src="../scripts/landing-page.js"></script> -->
+  <script type="module" src="../scripts/landing-page.js"></script>
 </body>
 
 </html>
