Landing page improvements

--- a/client/index.html
+++ b/client/index.html
@@ -539,7 +539,7 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
   </section>
   <!-- Testimonial Section (Landing Page) -->
 
-  <!-- <div class="testimonial-section">
+  <div class="testimonial-section">
     <h2>See What Happens When Everything Connects</h2>
     <p class="hero-text">
       Progress from real people, using the same system you're about to unlock.
@@ -554,7 +554,7 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
     </div>
   </div>
 
-  <div class="dots-container"></div> -->
+  <div class="dots-container"></div>
 
   <div class="cta-container-subtle">
     <a href="pages/forms.html" class="claim-program-btn-subtle">Choose a Plan</a>
