Removed testimonial images in offer page

--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -207,7 +207,7 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
     <div class="review-section">
       <h3>This Isn’t Just Progress — It’s Personal</h3>
 
-      <div class="before-after-images">
+      <!-- <div class="before-after-images">
         <div class="before-image">
           <img src="#" alt="Before">
           <p class="image-label">Before</p>
@@ -216,7 +216,7 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
           <img src="#" alt="After">
           <p class="image-label">After</p>
         </div>
-      </div>
+      </div> -->
 
       <div class="review-container">
         <div class="testimonial-info">
