--- a/client/pages/sign-up-checkout.html
+++ b/client/pages/sign-up-checkout.html
@@ -115,7 +115,7 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
 
       <p class="terms">
         By proceeding you agree to our
-        <a href="terms-of-service.html" target="_blank" rel="noopener">Terms of Service</a> &
+        <a href="tos.html" target="_blank" rel="noopener">Terms of Service</a> &
         <a href="privacy-policy.html"   target="_blank" rel="noopener">Privacy Policy</a>.
         Subscription renews unless cancelled.
       </p>
