--- a/client/pages/sign-up.html
+++ b/client/pages/sign-up.html
@@ -127,7 +127,7 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
   
       <p class="terms">
         By creating an account, you agree to our
-        <a href="terms-of-service.html" target="_blank" rel="noopener">Terms of Service</a>
+        <a href="tos.html" target="_blank" rel="noopener">Terms of Service</a>
         and
         <a href="privacy-policy.html" target="_blank" rel="noopener">Privacy Policy</a>.
       </p>
