--- a/client/pages/forms.html
+++ b/client/pages/forms.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Let’s Personalize Your Tracker</title>
+  <title>Let’s Personalize Your Plan</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&family=Roboto:wght@400&display=swap"
     rel="stylesheet">
   <link href="../styles/forms.css" rel="stylesheet">
@@ -76,35 +76,41 @@
     </div>
   </div>
   <div class="scroll">
-    <div class="header fade-in">
+    <div class="header">
       <div class="logo">
         <a href="../index.html">
-          <img id="logo" class="fade-in-logo" src="../assets/rtb-logo-white.png" alt="Raising The Bar Logo">
+          <img id="logo" class="" src="../assets/rtb-logo-white.png" alt="Raising The Bar Logo">
         </a>
       </div>
       <div class="dark-mode-button">
-        <img id="darkModeToggle" class="fade-in" src="" alt="" height="0px">
+        <img id="darkModeToggle" class="" src="" alt="" height="0px">
       </div>
     </div>
 
-    <div class="form-container form-wrapper fade-in">
+    <div id="incentive-box">
+      <span>🎁 Complete this form <strong>now</strong> and unlock your first week 100% <strong>free — no card needed to start.</strong></span>
+      <button id="incentive-close" aria-label="Close">&times;</button>
+    </div>
+
+    <div class="form-container form-wrapper">
       <div class="form-question">
         <h2>Question</h2>
       </div>
       <div class="form-options">
         <ol>
           <li class="button-like">Option 1</li>
-          <li class="button-like">Option 2</li>
+          <!-- <li class="button-like">Option 2</li>
           <li class="button-like">Option 3</li>
-          <li class="button-like">Option 4</li>
+          <li class="button-like">Option 4</li> -->
         </ol>
       </div>
       <label style="line-height: 1.4;">
         <p class="disclaimer">
-          Please consult a healthcare professional before starting - this isn’t medical advice.
+          Let's personalize your plan - it only takes <strong>60 seconds!</strong><br><br>
+          <!-- Please consult a healthcare professional before starting - this isn’t medical advice. -->
         </p>
         <input type="checkbox" id="agreement-checkbox">
-        By continuing, you agree to our <a href="tos.html" target="_blank">Terms of Service</a>,
+        By continuing, you confirm that you understand this isn’t medical advice and agree to our <a href="tos.html" target="_blank">Terms of Service</a>,
         <a href="privacy-policy.html" target="_blank">Privacy Policy</a>, and
         <a href="cookie-policy.html" target="_blank">Cookie Policy</a>.
       </label>
