Form page improvements

--- a/client/pages/forms.html
+++ b/client/pages/forms.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <link rel="preload" as="image" href="../assets/rtb-logo-white-224.webp" fetchpriority="high">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Let’s Personalize Your Plan</title>
@@ -78,9 +79,18 @@
   <div class="scroll">
     <div class="header">
       <div class="logo">
-        <a href="../index.html">
-          <img id="logo" class="" src="../assets/rtb-logo-white.png" alt="Raising The Bar Logo">
-        </a>
+      <a href="../index.html" class="logo">
+        <picture>
+          <!-- WebP first -->
+          <source type="image/webp" srcset="/assets/rtb-logo-white-224.webp">
+
+          <!-- JPEG fallback -->
+          <source type="image/jpeg" srcset="/assets/rtb-logo-white-224.jpg">
+
+          <img id="logo" src="/assets/rtb-logo-white-224.webp" alt="Raising The Bar Logo" width="224" height="100"
+            loading="eager" fetchpriority="high" decoding="async">
+        </picture>
+      </a>
       </div>
       <div class="dark-mode-button">
         <img id="darkModeToggle" class="" src="" alt="" height="0px">
